Remove write permissions

--- a/.github/workflows/push_secret.yml
+++ b/.github/workflows/push_secret.yml
@@ -9,8 +9,8 @@ on:
         default: 'latest'
 
 # Do we need permissions?
-permissions:
-  packages: write
+# permissions:
+#   packages: write
 
 jobs:
   build-image:
