--- a/.github/workflows/push_secret.yml
+++ b/.github/workflows/push_secret.yml
@@ -9,8 +9,8 @@ on:
         default: 'latest'
 
 # Do we need permissions?
-# permissions:
-#   packages: write
+permissions:
+  packages: write
 
 jobs:
   build-image:
@@ -23,7 +23,6 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          # password: ${{ secrets.GH_TOKEN }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v4
