--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -30,5 +30,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/push-secret-image:${{ inputs.tags }}
-            ghcr.io/${{ github.repository_owner }}/push-secret-image:latest
+            ghcr.io/${{ github.repository_owner }}/secret-image:${{ inputs.tags }}
+            ghcr.io/${{ github.repository_owner }}/secret-image:latest
